--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,8 @@
 name: CI Pipeline
+
 on:
   push:
-    branches: [ "main" ] # jalankan saat ada push ke main
+    branches: [ "main" ]
 
 jobs:
   build:
@@ -15,5 +16,9 @@ jobs:
       with:
         python-version: '3.x'
 
-    - name: Run Program
-      run: python hello.py
+    - name: Install Dependencies
+      run: pip install pytest
+
+    - name: Run Tests
+      run: pytest
+
